<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newcolor"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_vertical"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:fontFamily="@font/remachinescript"
                android:text="@string/register_name"
                android:textColor="@color/primary2"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/motionpicture"
            android:textAlignment="center"
            android:textColor="@color/primary2"
            android:layout_marginTop="5dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_hint_mail"
            android:layout_marginTop="16dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/second2"
            app:startIconContentDescription="@string/register_mail_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_hint_fullName"
            android:layout_marginTop="2dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/second2"
            app:startIconContentDescription="@string/register_fullName_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_hint_phoneNumber"
            android:layout_marginTop="2dp"
            app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
            app:startIconTint="@color/second2"
            app:startIconContentDescription="@string/register_phoneNumber_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_inputLayout_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_hint_password"
            android:layout_marginTop="2dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/second2"
            app:startIconContentDescription="@string/register_Password_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_input_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/melodic"
            android:textStyle="bold"
            android:padding="18dp"
            android:text="@string/register"
            app:cornerRadius="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already ha an Account?"
                android:textColor="@color/gray"
                />

            <TextView
                android:id="@+id/textLogInH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="Log In Here"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>